sort practices by order,improve visuals

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -261,7 +261,7 @@ const enSlug = "/" + langSlug.replace(`${lang}/`, "en/", 1);
           <div class="">
             <div class="flex-1 gap-x-3">
               <div><strong>{t("Phone")}</strong></div>
-              <a href="tel:+966114646777"><div dir="ltr" style={
+              <a href="tel:+966114646777"><div dir="" style={
 								lang == "ar"
 								? "end"
 								: ""
