--- a/src/pages/_about-us.astro
+++ b/src/pages/_about-us.astro
@@ -10,8 +10,8 @@ const t = useTranslations(lang);
 <div class="p-6 md:p-12 max-w-7xl mx-auto">
     <!-- Headlines -->
     <div class="flex col-span-12 gap-x-1 md:col-span-4">
-      <div class="uppercase text-xl w-40 text-[#343434]" style="font-size: 30px;">{t("our goal")}</div>
-      <p class="md:text-3xl lg:text-4xl ml-auto w-11/12 md:w-9/12 lg:leading-10 md:px-10 overflow-hidden">
+      <div class="uppercase text-3xl text-[#343434] lg:text-4xl" style="">{t("our goal")}</div>
+      <p class="md:text-2xl lg:text-3xl ml-auto w-11/12 md:w-9/12 lg:leading-10 md:px-10 overflow-hidden">
         {t("Our principal goals are to provide the")}
         <span class="md:font-semibold">{t("highest quality of legal services")}</span>
         {t("that allow us to be an instrumental part in our clients' success,")}
@@ -41,8 +41,8 @@ const t = useTranslations(lang);
     <div class="flex items-center flex-col md:flex-row">
       <img class="w-full md:w-1/2 my-10 md:order-last" src="/static/assets/images/omar-alrasheed-2.png" />
       <div class="w-full md:w-1/2">
-        <div class="uppercase my-3 text-xl text-[#343434]">{t("our leadership")}</div>
-        <p>{t("Led by our managing partner Omar Alrasheed since 2006, our team is guided by a commitment to proactive engagement and a relentless pursuit of excellence.")}
+        <div class="uppercase my-3 text-2xl text-[#343434]">{t("our leadership")}</div>
+        <p class="me-8">{t("Led by our managing partner Omar Alrasheed since 2006, our team is guided by a commitment to proactive engagement and a relentless pursuit of excellence.")}
         </p>
       </div>
     </div>
@@ -54,7 +54,7 @@ const t = useTranslations(lang);
         class="uppercase md:border-t md:border-b-0 md:text-start py-5 font-normal text-[#555555] text-2xl text-center border-b border-[#555555]">
         {t("our mission statement")}
       </div>
-      <div class="pb-5 grid grid-cols-12 gap-y-4 border-b flex flex-col md:flex-row md:ml-14 border-[#555555]">
+      <div class="pb-5 grid grid-cols-12 gap-y-4 border-b  md:flex-row md:ml-14 border-[#555555]">
         <div class="flex col-span-12 gap-x-3 md:col-span-4 relative">
           <div class="font-thin" style="padding-top: 6px;">01</div>
           <div class="pt-1.5 text-3xl font-bold text-[#555555]">{t("Depth")}</div>
@@ -63,7 +63,7 @@ const t = useTranslations(lang);
           {t("Our lawyers, which include some of the industry's key partners, counsel and senior associates, are specialized in their respective disciplines and are able to apply such specialization in specific business sectors including specialization in Islamic finance structures, complex squeeze-out and hostile M&A processes, banking and finance legislation, energy and power regulation and privatization, bespoke foreign investment in private and public markets, banking and securities litigation, and telecommunication and media practices.")}
         </p>
       </div>
-      <div class="pb-5 grid grid-cols-12 gap-y-4 border-b flex flex-col md:flex-row gap-x-4 md:ml-14 border-[#555555]">
+      <div class="pb-5 grid grid-cols-12 gap-y-4 border-b  md:flex-row gap-x-4 md:ml-14 border-[#555555]">
         <div class="flex col-span-12 gap-x-3 md:col-span-4 relative">
           <div class="font-thin" style="padding-top: 6px;">02</div>
           <div class="pt-1.5 text-3xl font-bold text-[#555555]">{t("Trusted by Clients")}</div>
@@ -73,7 +73,7 @@ const t = useTranslations(lang);
           
         </p>
       </div>
-      <div class="pb-5 grid grid-cols-12 gap-y-4 border-b flex flex-col md:flex-row gap-x-4 md:ml-14 border-[#555555]">
+      <div class="pb-5 grid grid-cols-12 gap-y-4 border-b  md:flex-row gap-x-4 md:ml-14 border-[#555555]">
         <div class="flex col-span-12 gap-x-3 md:col-span-4 relative">
           <div class="font-thin" style="padding-top: 6px;">03</div>
           <div class="pt-1.5 text-3xl font-bold text-[#555555]">{t("Market Recognition")}</div>
@@ -82,7 +82,7 @@ const t = useTranslations(lang);
           {t("A well known household name in the legal sector in Saudi Arabia with attorneys and associates who specialized in a wide range of legal matters and market sectors.")}
         </p>
       </div>
-      <div class="pb-5 grid grid-cols-12 gap-y-4 border-b flex flex-col md:flex-row gap-x-4 md:ml-14 border-[#555555]">
+      <div class="pb-5 grid grid-cols-12 gap-y-4 border-b  md:flex-row gap-x-4 md:ml-14 border-[#555555]">
         <div class="flex col-span-12 gap-x-3 md:col-span-4 relative">
           <div class="font-thin w-10" style="padding-top: 6px;">04</div>
           <div class="pt-1.5 text-3xl font-bold text-[#555555]">{t("Our Work with international firms")}</div>
@@ -90,7 +90,7 @@ const t = useTranslations(lang);
         <p class="col-span-12 md:col-span-7 ml-auto">
           {t("Our independence allows us to work with the right international law firm for any given matter. We are a part of Multilaw international legal network providing us access to thousands or the best law firms around the world. Thereby enhancing our ability to offer and deliver cross-border, multi-jurisdiction, and fast-paced advice to our respective clients.")}
       </div>
-      <div class="pb-5 grid grid-cols-12 gap-y-4 border-b flex flex-col md:flex-row gap-x-4 md:ml-14 border-[#555555]">
+      <div class="pb-5 grid grid-cols-12 gap-y-4 border-b  md:flex-row gap-x-4 md:ml-14 border-[#555555]">
         <div class="flex col-span-12 gap-x-3 md:col-span-4 relative">
           <div class="font-thin w-10" style="padding-top: 6px;">05</div>
           <div class="pt-1.5 text-3xl font-bold text-[#555555]">{t("Our Ethical and Transparent Code of Conduct")}</div>
