--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -294,9 +294,8 @@ const enSlug = "/" + langSlug.replace(`${lang}/`, "en/", 1);
         <div class="flex items-center gap-3">
           <!-- <img class="h-5 w-5" src="/static/assets/images/instagram.png" alt="img" />
           <img class="h-5 w-5" src="/static/assets/images/twitter-sign.png" alt="img" /> -->
-          <a
-            href="https://www.linkedin.com/company/omar-al-rasheed-&-partners-law-firm/about/"
-          >
+          <a href="https://www.linkedin.com/company/omar-al-rasheed-&-partners-law-firm/about/" 
+             target="_blank">
             <img
               class="h-5 w-5"
               src="/static/assets/images/linkedin.png"
@@ -310,9 +309,8 @@ const enSlug = "/" + langSlug.replace(`${lang}/`, "en/", 1);
           <div class="flex items-center gap-3">
           <!-- <img class="h-5 w-5" src="/static/assets/images/instagram.png" alt="img" />
           <img class="h-5 w-5" src="/static/assets/images/twitter-sign.png" alt="img" /> -->
-            <a
-            href="https://www.instagram.com/asmaalmoayyad_photography/"
-            >
+            <a href="https://www.instagram.com/asmaalmoayyad_photography/"
+            target="_blank">
             <span class="[&>svg]:h-7 [&>svg]:w-7 [&>svg]:fill-[#c13584]">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                 <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc. -->
