improve and fix Update Visuals

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -268,15 +268,14 @@ console.log(listArticles);
     </div>
   </section>
   <!-- at your service -->
-  <section class="mb-40">
-    <div
-      class="relative flex items-center flex-col md:flex-row justify-between lg:justify-center p-6 mx-auto space-y-5">
-      <img class="md:order-last w-full md:scale-125 xl:scale-100 lg:w-6/12 max-w-[800px]" 
-      src={
-				lang == "en"
-				? "/static/assets/images/rlo-multilaw-en.svg"
-				: "/static/assets/images/rlo-multilaw-ar.svg"
-				} alt="">
+  <section class=""> 
+    <div  class="">
+      <img class="" 
+           src={
+            lang == "en"
+            ? "/static/assets/images/rlo-multilaw-en.svg"
+            : "/static/assets/images/rlo-multilaw-ar.svg"
+            } alt="">
       <div class="text-lg lg:text-3xl w-full md:max-w-xl">
         <h6 class="font-bold text-[32px] text-2xl md:text-4xl lg:text-5xl text-black px-7 py-4 md:p-7">{t("At your service")}</h6>
         <ul class="space-y-3 font-light ms-12">
