--- a/src/pages/_updates.astro
+++ b/src/pages/_updates.astro
@@ -28,25 +28,25 @@ const testimonials = await Promise.all(testimonialList
 ---
 <Layout lang={lang} slug={slug}>
 	<!-- Gallery -->
-  <div class="bg-[#343434] p-6 md:p-12 lg:p-20">
+  <div class="bg-[#343434] ">
 	<div class="2xl:w-10/12 mx-auto">
-    <h2 class="text-3xl my-10 text-white">{t("Updates")}</h2>
+    <h2 class="text-3xl py-10 mx-5 text-neutral-200 uppercase ">{t("Updates")}</h2>
      <div class="relative px-5 my-5">
       <img class="absolute w-6" src="/static/assets/images/search.svg" alt="" />
       <input id="search-input"
-        class="placeholder:text-white/50 text-white border-b border-white/30 w-full bg-transparent px-14 py-1 focus:outline-none"
+        class="placeholder:text-white/50 text-neutral-100 border-b border-white/30 w-full bg-transparent px-14 py-1 focus:outline-none"
         type="text" placeholder={t("Search by Title, Title")} />
     </div>
 
     <div class="grid grid-cols-1 mt-10 gap-8 md:grid-cols-3 lg:grid-cols-4">
 			{
 				updateList.map(entry => (
-					<a class="article-container my-10 pt-2 min-h-full  border-s border-neutral-500 transition duration-700 hover:shadow-2xl shadow-gray-950" 
+					<a class="my-10 pt-2 min-h-full  border-s border-neutral-500 transition duration-700 hover:shadow-2xl shadow-gray-950" 
 						href=`/updates/${entry.slug}`>
-						<div class="flex flex-col gap-3 text-white px-8 justify-between">
+						<div class="flex flex-col gap-3 text-neutral-100 px-8 justify-evenly min-h-full">
 							<img class="w-full min-h-30  max-h-64 object-cover object-center xl:object-contain" src={entry.data.image} alt="">          
 							<h3 class="article-Title text-lg mt-10">{entry.data.name}</h3>
-							<p class="text-base">{new Date(entry.data.date).toISOString().slice(0, 10)}</p> 
+								<h4 class="text-neutral-500 text-base">{new Date(entry.data.date).toISOString().slice(0, 10)}</h5>
 						</div>
 					</a>				
 				))
@@ -56,13 +56,13 @@ const testimonials = await Promise.all(testimonialList
 
     </div>
   </div>
-  <div class="bg-neutral-100 p-6 md:p-12 lg:p-20">
+  <div class="bg-neutral-100 p-6 md:px-12 lg:px-20 mt-20">
      <!-- What they are saying -->
      <div class="text-center my-8 p-6 md:p-12 lg:max-w-7xl mx-auto">
       <h2 class="uppercase text-[#D0222B] text-4xl overflow-hidden">{t("What they are saying")}</h2>
       <p class=""><strong >{t("Collated independently by Legal 500 research team")}</strong></p>
   </div> 
-  <div class="grid grid-cols-2 gap-8 justify-center italic">
+  <div class="grid md:grid-cols-2 gap-8 justify-center italic">
 		{
 			testimonials.map(entry => (
 				<div class="bg-neutral-200 p-8 rounded shadow">
