--- a/src/pages/_contact-us.astro
+++ b/src/pages/_contact-us.astro
@@ -56,8 +56,9 @@ const t = useTranslations(lang);
             name="email"
             required
           />
+
           <input
-            class="bg-transparent border-b border-white/20 py-3 w-full md:w-5/2 text-xl font-light focus:outline-none"
+            class="bg-transparent border-b text-start border-white/20 py-3 w-full md:w-5/2 text-xl font-light focus:outline-none"
             type="tel"
             placeholder={t( "Phone Number")}
             id="phone"
