--- a/src/pages/_updates.astro
+++ b/src/pages/_updates.astro
@@ -29,8 +29,8 @@ const testimonials = await Promise.all(testimonialList
 <Layout lang={lang} slug={slug}>
 	<!-- Gallery -->
   <div class="bg-[#343434] ">
-	<div class="2xl:w-10/12 mx-auto">
-    <h2 class="text-3xl py-10 mx-5 text-neutral-200 uppercase ">{t("Updates")}</h2>
+	<div class="2xl:w-10/12 mx-auto px-6 md:px-10">
+    <h2 class="uppercase w-full text-4xl py-20 text-neutral-200 ">{t("Updates")}</h2>
      <div class="relative px-5 my-5">
       <img class="absolute w-6" src="/static/assets/images/search.svg" alt="" />
       <input id="search-input"
