contact up tel rtl bug fix

--- a/src/pages/_contact-us.astro
+++ b/src/pages/_contact-us.astro
@@ -59,7 +59,7 @@ const t = useTranslations(lang);
 
           <input
             class="bg-transparent border-b text-start border-white/20 py-3 w-full md:w-5/2 text-xl font-light focus:outline-none"
-            type="tel"
+            type="text"
             placeholder={t( "Phone Number")}
             id="phone"
             name="phone"
